# music-index-rs

./: .gitignore  Cargo.toml  README.md
examples/: music-cli.rs
src/: error.rs  lib.rs  prelude.rs
src/music/: album.rs  band.rs  cache.rs  mod.rs  track.rs
